--- a/css/styles.css
+++ b/css/styles.css
@@ -68,9 +68,9 @@ a{
 
 
 .menu:link{color:#005883; text-decoration:none}
-.menu:visited{color:#005883; text-decoration:none; background:#FFF}
+/*.menu:visited{color:#005883; text-decoration:none; background:#FFF}*/
 .menu:hover{color:#FFF; text-decoration:none; background:#F0B429}
-.menu:active{color:#FFF; text-decoration:none; background:#005883}
+/*.menu:active{color:#FFF; text-decoration:none; background:#005883}*/
 
 
 
@@ -165,6 +165,7 @@ footer{
 	margin-bottom:20px;
 	color:#FFF;
 }
+
 .autor{
 	float:inherit;
 	width:900px;
